fixed alignment

--- a/app/assets/stylesheets/components/_pigeon_card.scss
+++ b/app/assets/stylesheets/components/_pigeon_card.scss
@@ -78,6 +78,7 @@
   scroll-snap-align: start;
   font-family: "Inter", sans-serif!important;
   font-size: 0.6rem;
+  position: relative;
     // &:hover {
     //   height: 280px;
     //   width: 280px;
